kubernetes/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: object-service
  name: object-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-service
  template:
    metadata:
      labels:
        app: object-service
      annotations:
        actuator.prometheus.io/scrape: 'true'
        actuator.prometheus.io/path: '/actuator/prometheus'
        actuator.prometheus.io/port: '8080'
        otel.prometheus.io/scrape: 'true'
        otel.prometheus.io/port: '9464'
    spec:
      containers:
        - image: object-service
          imagePullPolicy: IfNotPresent # using local image from docker
          name: object-service
          ports: # naming ports to be able to use different prometheus relabel rules for multiple metric endpoints
            - name: app
              containerPort: 8080
            - name: otel-metrics
              containerPort: 9464
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          resources: { }
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: object-events
  name: object-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-events
  template:
    metadata:
      labels:
        app: object-events
      annotations:
        actuator.prometheus.io/scrape: 'true'
        actuator.prometheus.io/path: '/actuator/prometheus'
        actuator.prometheus.io/port: '8080'
        otel.prometheus.io/scrape: 'true'
        otel.prometheus.io/port: '9464'
    spec:
      containers:
        - image: object-events
          imagePullPolicy: IfNotPresent # using local image from docker
          name: object-events
          ports:
            - name: app
              containerPort: 8080
            - name: otel-metrics
              containerPort: 9464
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          resources: { }
      restartPolicy: Always
