kubernetes/deployment-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-service
  name: object-service
spec:
  ports:
    - name: "8080"
      port: 8080
    - name: "9464"
      port: 9464
  selector:
    app: object-service
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-events
  name: object-events
spec:
  ports:
    - name: "8080"
      port: 8080
    - name: "9464"
      port: 9464
  selector:
    app: object-events
  type: LoadBalancer
