kubernetes/deployment-logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loki
  name: loki
spec:
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      serviceAccountName: logging-service-account
      containers:
        - image: 'grafana/loki:2.9.4'
          name: loki
          ports:
            - containerPort: 3100
          args:
            - '-config.file=/etc/loki/loki.yaml'
          resources: { }
          volumeMounts:
            - mountPath: /etc/loki
              name: loki-config
      restartPolicy: Always
      volumes:
        - name: loki-config
          configMap:
            defaultMode: 420
            name: loki-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
  name: loki
spec:
  ports:
    - name: "3100"
      port: 3100
  selector:
    app: loki
  type: LoadBalancer
# Promtail.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '9080'
        prometheus.io/scrape: 'true'
    spec:
      serviceAccount: promtail-serviceaccount
      containers:
        - name: promtail-container
          image: grafana/promtail
          ports:
            - containerPort: 9080
              protocol: TCP
          args:
            - -config.file=/etc/promtail/promtail.yaml
          volumeMounts:
            - name: logs
              mountPath: /var/log
            - name: promtail-config
              mountPath: /etc/promtail
            - mountPath: /var/lib/docker/containers
              name: varlibdockercontainers
              readOnly: true
      volumes:
        - name: logs
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: promtail-config
          configMap:
            name: promtail-config
