kubernetes/deployment-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  ports:
    - name: "27017"
      port: 27017
  selector:
    app: mongo
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8081"
      port: 8081
  selector:
    app: mongo-express
  type: LoadBalancer
