kubernetes/deployment-mongo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      serviceAccountName: mongo-service-account
      containers:
        - image: 'mongo:5.0.8'
          name: mongo
          ports:
            - containerPort: 27017
          resources: { }
      restartPolicy: Always
      volumes:
        - name: mongo-claim0
          persistentVolumeClaim:
            claimName: mongo-claim0
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  ports:
    - name: "27017"
      port: 27017
  selector:
    app: mongo
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      serviceAccountName: mongo-service-account
      containers:
        - image: 'mongo-express:0.54.0'
          name: mongo-express
          ports:
            - containerPort: 8081
          resources: { }
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8081"
      port: 8081
  selector:
    app: mongo-express
  type: LoadBalancer
