kubernetes/deployment-observability-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
    - name: "9090"
      port: 9090
  selector:
    app: prometheus
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
spec:
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  ports:
    - name: node-exporter
      protocol: TCP
      port: 9100
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000'
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  ports:
    - name: "9411"
      port: 9411
    - name: "14250"
      port: 14250
    - name: "16686"
      port: 16686
  selector:
    app: jaeger
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "4317"
      port: 4317
    - name: "9464"
      port: 9464
  selector:
    app: otel-collector
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tempo
  name: tempo
spec:
  ports:
    - name: "4317"
      port: 4317
    - name: "3200"
      port: 3200
  selector:
    app: tempo
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
  name: loki
spec:
  ports:
    - name: "3100"
      port: 3100
  selector:
    app: loki
  type: LoadBalancer
