kubernetes/deployment-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  ports:
    - name: "8080"
      port: 8080
  selector:
    app: adminer
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
  selector:
    app: postgres
  type: LoadBalancer
