kubernetes/deployment-tracing.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      serviceAccountName: tracing-service-account
      containers:
        - image: 'jaegertracing/all-in-one:1.34'
          name: jaeger
          ports:
            - containerPort: 9411
            - containerPort: 14250
            - containerPort: 16686
          resources: { }
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  ports:
    - name: "9411"
      port: 9411
    - name: "14250"
      port: 14250
    - name: "16686"
      port: 16686
  selector:
    app: jaeger
  type: LoadBalancer
