kubernetes/ingress-app.yaml
# Important. Services configured to have context-path equal to ingress /path
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
spec:
  rules:
    - host: object-service.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: object-service
                port:
                  number: 8080
    - host: object-events.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: object-events
                port:
                  number: 8080
  ingressClassName: nginx
