kubernetes/ingress-env.yaml
# Important. Kafka-ui, Keycloak, Grafana, Prometheus, Mongo Express configured to have context-path equal to ingress /path
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kafka-ui
spec:
  rules:
    - http:
        paths:
          - path: /kafka-ui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
spec:
  rules:
    - http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mongo
spec:
  rules:
    - http:
        paths:
          - path: /mongo-express
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminer
spec:
  rules:
    - http:
        paths:
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
spec:
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  ingressClassName: nginx
